--- a/api/.babelrc
+++ b/api/.babelrc
@@ -1,4 +1,14 @@
 {
-  "presets": ["env"],
+  "presets": [
+    "babel-preset-es2015",
+    [
+      "env",
+      {
+        "targets": {
+          "node": 9.4
+        }
+      }
+    ]
+  ],
   "plugins": ["transform-object-rest-spread"]
 }
