--- a/api/package.json
+++ b/api/package.json
@@ -4,21 +4,30 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
-    "bcrypt": "^1.0.2",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.17.1",
     "cors": "^2.8.3",
+    "dotenv": "^4.0.0",
     "express": "^4.15.2",
     "jsonwebtoken": "^7.3.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.0.0-beta.38",
     "babel-cli": "^6.24.0",
+    "babel-loader": "^7.1.2",
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-preset-env": "^1.2.2",
-    "dotenv": "^4.0.0",
-    "nodemon": "^1.11.0"
+    "babel-preset-es2015": "^6.24.1",
+    "nodemon": "^1.11.0",
+    "webpack": "^3.10.0",
+    "webpack-node-externals": "^1.6.0"
   },
   "scripts": {
-    "dev": "nodemon --exec babel-node ./index.js"
+    "start": "node ./dist/server.js",
+    "dev": "nodemon --exec babel-node ./index.js",
+    "build":
+      "yarn run clean && webpack --env=prod -p --display-modules --display-chunks",
+    "clean": "rm -rf dist && mkdir dist"
   },
   "keywords": [],
   "author": "",
